<resources>
    <string name="app_name">安卓易手机管家</string>
    <!-- home 主界面 -->
    <string name="about">关于我们</string>
    <string name="setting">设置</string>
    <string name="rocket">手机加速</string>
    <string name="softmgr">软件管理</string>
    <string name="phonemgr">手机检测</string>
    <string name="telmgr">通讯大全</string>
    <string name="filemgr">文件管理</string>
    <string name="sdclean">垃圾清理</string>

    <string name="action_settings">Settings</string>
    <string name="tel_title">一站式号码服务平台</string>
    <!--Setting-->
    <string name="setting_autostart"> 开机启动 </string>
    <string name="setting_pushmsg"> 消息推送 </string>
    <string name="setting_notifmsg"> 通知图标 </string>
    <string name="setting_clear"> 清理缓冲 </string>
    <string name="setting_update"> 版本更新 </string>
    <string name="setting_help"> 帮助说明 </string>
    <string name="setting_study"> 意见反溃 </string>
    <string name="setting_share"> 好友分享 </string>
    <string name="setting_about"> 关于我们 </string>
    <string name="title_activity_speedup">SpeedupActivity</string>
    <!--软件管理中的选项-->
    <string name="setting_ruanjianguanli_all">所有软件</string>
    <string name="setting_ruanjianguanli_sys">系统软件</string>
    <string name="setting_ruanjianguanli_user">用户软件</string>

    <!--手机加速-->
    <string name="speedup_show_sysapp">显示系统进程</string>
    <string name="speedup_show_userapp">只显示用户进程</string>
</resources>
