<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_rocket"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_rocket"
            android:text="@string/rocket"
            />
        <TextView
            android:id="@+id/tv_softmgr"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_softmgr"
            android:text="@string/softmgr"
            />
        <TextView
            android:id="@+id/tv_phonemgr"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_phonemgr"
            android:text="@string/phonemgr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_telmgr"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_telmgr"
            android:text="@string/telmgr"
            />
        <TextView
            android:id="@+id/tv_filemgr"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_filemgr"
            android:text="@string/filemgr"
            />
        <TextView
            android:id="@+id/tv_sdclean"
            style="@style/homeitem"
            android:drawableTop="@drawable/icon_sdclean"
            android:text="@string/sdclean"
            />
    </LinearLayout>

</LinearLayout>
