<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--  开机启动 -->
    <RelativeLayout
        android:id="@+id/rl_setting_autostart"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_autostart"/>
        <ToggleButton
            android:id="@+id/tb_setting_autostart"
            style="@style/setting_item_head_icon_toggle"/>
    </RelativeLayout>
    <!--  通知图标 -->
    <RelativeLayout
        android:id="@+id/rl_setting_notifmsg"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_notifmsg"/>
        <ToggleButton
            android:id="@+id/tb_setting_notifmsg"
            style="@style/setting_item_head_icon_toggle"/>
    </RelativeLayout>
    <!--  消息推送 -->
    <RelativeLayout
        android:id="@+id/rl_setting_pushmsg"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_pushmsg"/>
        <ToggleButton
            android:id="@+id/tb_setting_pushmsg"
            style="@style/setting_item_head_icon_toggle"/>
    </RelativeLayout>
    <!--  帮助 说明 -->
    <RelativeLayout
        android:id="@+id/rl_setting_help"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_help"/>
        <ImageView
            android:id="@+id/iv_setting_help"
            style="@style/setting_item_end"
            android:src="@drawable/ic_arrows_right"/>
    </RelativeLayout>
    <!--  意见反馈 -->
    <RelativeLayout
        android:id="@+id/rl_setting_study"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_study"/>
        <ImageView
            android:id="@+id/iv_setting_study"
            style="@style/setting_item_end"
            android:src="@drawable/ic_arrows_right"/>
    </RelativeLayout>
    <!--  好友 分享-->
    <RelativeLayout
        android:id="@+id/rl_setting_share"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_share"/>
        <ImageView
            android:id="@+id/iv_setting_share"
            style="@style/setting_item_end"
            android:src="@drawable/ic_arrows_right"/>
    </RelativeLayout>
    <!--  版本更新-->
    <RelativeLayout
        android:id="@+id/rl_setting_update"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_update"/>
        <ImageView
            android:id="@+id/iv_setting_update"
            style="@style/setting_item_end"
            android:src="@drawable/ic_arrows_right"/>
    </RelativeLayout>
    <!--  关于我们 -->
    <RelativeLayout
        android:id="@+id/rl_setting_about"
        style="@style/setting_item">
        <TextView
            style="@style/setting_item_head"
            android:text="@string/setting_about"/>
        <ImageView
            android:id="@+id/iv_setting_about"
            style="@style/setting_item_end"
            android:src="@drawable/ic_arrows_right"/>
    </RelativeLayout>

</LinearLayout>
